Added multi device support Added action "Send to Device" it sends data to specific serial device Added Condition "Device Equals" it checks if the input came from specific device